Enhance testing explanations in DECISIONES.md
Added detailed explanations for testing concepts and practices related to unit tests, mocking, and assertions in the DECISIONES.md file.